--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,33 +1,68 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin: 0;
+  padding: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  height: 38px;
+  width: 300px;
+  border-radius: 3px;
+  border: none;
+  padding-left: 10px;
+  font-size: 14px;
+}
+
+input::placeholder {
+
+  font-size: 14px;
+  margin: 0;
+}
+
+button {
+  background: #61dafb;
+  border: none;
+  margin: 10px;
+  height: 40px;
+  width: 100px;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #FFFFFF;
+  border-radius: 3px;
+}
+
+.list-item-container {
+  /* padding: 20px 0; */
+  list-style-type: circle;
+  font-size: 16px;
+  text-align: left;
+  width: 430px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.item-completed {
+  text-decoration: line-through;
+}
+
+li.list-item {
+  list-style-type: circle;
+  align-self: center;
+}
+
+button.delete-all {
+  width: 200px;
+}
+
+button.delete {
+  background: red;
 }
